[package]
name = "poseidon-rs"
version = "0.0.3"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"

