[package]
name = "poseidon-rs"
version = "0.0.9"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false
